# study-gnuc-cmake

./: .gitignore  .gitmodules  .vscode-ctags  CMakeLists.txt  README.md
handson/: CMakeLists.txt  example1.cpp  mem.cpp
hello/: CMakeLists.txt  excp.cpp  hello.cpp  ioterm.cpp  ipc.cpp  ipcexec.cpp  ipcpipe.cpp  ipcredir.cpp  ipcshm.cpp  ipcsig.cpp  multargs.cpp  process.cpp
hello/include/: MyClass.hpp
helloc/: .gitignore  CMakeLists.txt  args.c  hello.c  prolog.c
